Fix margins and alignment for header on mobile

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,23 +1,34 @@
 @use '../../styles/partials/colors' as *;
 
+.header__logo {
+    display: block;
+    margin: 1rem auto 0 auto;
+    height: 1.5rem;
+}
+
 .header__searchbar {
     border: none;
     padding: 0;
+    display: flex;
+    align-items: center;
 }
 
 .header__searchbar--input {
     border: 1px solid $mercury;
     display: block;
-    padding: 0.5rem 0.3rem 0.5rem 2.5rem;
+    padding: 0.8rem 0.3rem 0.8rem 2.5rem;
+    margin: 1rem;
     background: transparent url("../../assets/images/search.svg") no-repeat 0.8rem center;
     background-color: $alabaster;
+    flex: 1;
+    border-radius: 5px;
 }
 
 .header__avatar {
     border-radius: 50%;
     height: 2.25rem;
     width: 2.25rem;
-    margin: 1rem 0.5rem 1rem 0;
+    margin: 1rem 0.5rem;
 }
 
 .header__button {
@@ -28,8 +39,9 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 100%;
+    width: 93%;
     padding: 0.8rem;
+    margin: 0 1rem;
     position: relative;
 }
 
